fix: dark mode in hackathon

--- a/apps/commudle-admin/src/app/feature-modules/hackathon-control-panel/components/hackathon-control-panel-tracks-prizes/hackathon-control-panel-prize/hackathon-prize-card/hackathon-prize-card.component.scss
+++ b/apps/commudle-admin/src/app/feature-modules/hackathon-control-panel/components/hackathon-control-panel-tracks-prizes/hackathon-control-panel-prize/hackathon-prize-card/hackathon-prize-card.component.scss
@@ -38,7 +38,12 @@
     }
 
     tr:not(:first-child):not(.winner) {
-      @apply com-cursor-pointer hover:com-bg-gray-100;
+      @apply com-cursor-pointer hover:com-bg-gray-300;
+    }
+    tr:not(:first-child):not(.winner):hover {
+      td {
+        @apply com-text-tblack;
+      }
     }
 
     .team-name {
@@ -57,7 +62,13 @@
     }
 
     .winner {
-      @apply com-bg-slate-200;
+      @apply com-bg-gray-300;
+      td {
+        @apply com-text-tblack;
+        span {
+          @apply com-text-tblack;
+        }
+      }
     }
 
     .prizes {
